--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,56 @@
 name: build
 on:
   push:
-    branches: [ 'main' ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ 'main' ]
+    branches: [ "main" ]
+
+env:
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Docker Buildx
+    - name: checkout
+      uses: actions/checkout@v3
+
+    - name: setup buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Log into registry
+    - name: log in to docker.io
       uses: docker/login-action@v2
-      if: github.event_name == 'push'
+      if: github.event_name == "push"
       with:
         username: shinomineko
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Extract Docker metadata
+    - name: log in to ghcr.io
+      uses: docker/login-action@v2
+      if: github.event_name == "push"
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: extract  metadata
       id: meta
       uses: docker/metadata-action@v4
       with:
-        images: shinomineko/conncheck
+        images: |
+          docker.io/${{ env.IMAGE_NAME }}
+          ghcr.io/${{ env.IMAGE_NAME }}
+
 
     - name: Build and push image
       uses: docker/build-push-action@v3
       with:
         context: .
-        push: ${{ github.event_name == 'push' }}
+        push: ${{ github.event_name == "push" }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/amd64,linux/arm64
