--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,14 @@ jobs:
 
     - name: log in to docker.io
       uses: docker/login-action@v2
-      if: github.event_name == "push"
+      if: github.event_name == 'push'
       with:
         username: shinomineko
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: log in to ghcr.io
       uses: docker/login-action@v2
-      if: github.event_name == "push"
+      if: github.event_name == 'push'
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -50,7 +50,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
-        push: ${{ github.event_name == "push" }}
+        push: ${{ github.event_name == 'push' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/amd64,linux/arm64
